correctly display examples makes katakana and kanji stand out for better readability better tokenization (still can't find particles mixed in hiragana)

--- a/app/src/main/assets/style.css
+++ b/app/src/main/assets/style.css
@@ -39,3 +39,12 @@
 .mo {
     color: #ffcc00;
 }
+.kanji, .katakana {
+    padding-right:0.3em;
+    padding-left: 0.3em;
+    font-weight: 600;
+}
+
+.example {
+    white-space:pre-line;
+}
